@@ -17,10 +17,10 @@ import com.google.common.base.Preconditions;
 import com.google.common.collect.ArrayListMultimap;
 import com.google.common.collect.Multimap;
 
-import datawave.data.ColumnFamilyConstants;
 import datawave.data.type.LcNoDiacriticsType;
 import datawave.data.type.Type;
 import datawave.query.Constants;
+import datawave.table.constants.MetadataColumnFamilyConstants;
 
 public class DatatypeLoader extends AccumuloLoader<String,Multimap<String,Type<?>>> {
 
@@ -92,7 +92,7 @@ public class DatatypeLoader extends AccumuloLoader<String,Multimap<String,Type<?
             String colq = key.getColumnQualifier().toString();
             int idx = colq.indexOf(Constants.NULL);
 
-            if (key.getColumnFamily().equals(ColumnFamilyConstants.COLF_RI)) {
+            if (key.getColumnFamily().equals(MetadataColumnFamilyConstants.COLF_RI)) {
                 reverse = true;
             }
 
@@ -118,7 +118,7 @@ public class DatatypeLoader extends AccumuloLoader<String,Multimap<String,Type<?
                     String row = key.getRow().toString().toUpperCase();
 
                     if (reverse)
-                        row = new StringBuffer(row).reverse().toString();
+                        row = new StringBuilder(row).reverse().toString();
 
                     Multimap<String,Type<?>> typedNormalizers = entryCache.get(row);
 
@@ -130,7 +130,7 @@ public class DatatypeLoader extends AccumuloLoader<String,Multimap<String,Type<?
                     @SuppressWarnings("unchecked")
                     Class<? extends Type<?>> clazz = (Class<? extends Type<?>>) Class.forName(colq.substring(idx + 1));
 
-                    Type<?> normalizer = clazz.newInstance();
+                    Type<?> normalizer = clazz.getDeclaredConstructor().newInstance();
 
                     typedNormalizers.put(type, normalizer);
 
