@@ -1,6 +1,10 @@
 package datawave.query.tables;
 
+import static java.lang.Thread.sleep;
+
 import java.io.IOException;
+import java.time.Duration;
+import java.time.temporal.ChronoUnit;
 import java.util.Arrays;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -10,6 +14,10 @@ import java.util.Map;
 import java.util.Set;
 import java.util.SortedSet;
 import java.util.TreeSet;
+import java.util.concurrent.Executors;
+import java.util.concurrent.TimeUnit;
+import java.util.concurrent.TimeoutException;
+import java.util.concurrent.atomic.AtomicBoolean;
 
 import org.apache.accumulo.core.client.AccumuloClient;
 import org.apache.accumulo.core.client.AccumuloException;
@@ -79,7 +87,7 @@ public class ScannerSessionTest {
         client.tableOperations().addSplits("testTable", splits);
 
         // give the table a chance to be split
-        Thread.sleep(10000);
+        sleep(10000);
 
         // force writing all the data or fail
         try {
@@ -161,6 +169,48 @@ public class ScannerSessionTest {
         validate(ss);
     }
 
+    @Test
+    public void testScannerSessionThreadCleanupWaitingOnClient() {
+        Set<Authorizations> auths = new HashSet<>();
+        auths.add(new Authorizations());
+        // set maxResults to 1 so that the ScannerSession will block adding results to the queue not allowing the scanner to close
+        ScannerSession ss = new ScannerSession("testTable", auths, resourceQueue, 1, null);
+
+        List<Range> ranges = Arrays.asList(new Range(new Text(String.valueOf(25)), true, new Text(String.valueOf(27)), false),
+                        new Range(new Text(String.valueOf(1)), true, new Text(String.valueOf(2)), false),
+                        new Range(new Text(String.valueOf(98)), true, new Text(String.valueOf(99)), false));
+
+        ss.setRanges(ranges);
+
+        // this should kick off scanner in another thread and put one result on the resultQueue, forcing it to loop attempting
+        // to offer further results
+        ss.hasNext();
+
+        long startWait = System.currentTimeMillis();
+        AtomicBoolean forceClose = new AtomicBoolean(false);
+        Executors.newScheduledThreadPool(1).schedule(() -> {
+            // this should cause a shutdown
+            ss.close();
+        }, 5, TimeUnit.SECONDS);
+
+        Executors.newScheduledThreadPool(1).schedule(() -> {
+            forceClose.set(true);
+        }, 10, TimeUnit.SECONDS);
+
+        // this should block until the internal thread finishes
+        Duration d = Duration.of(12, ChronoUnit.SECONDS);
+        try {
+            ss.awaitTerminated(d);
+        } catch (TimeoutException e) {
+            // no-op
+        }
+        long endWait = System.currentTimeMillis();
+        // didn't end before the close
+        Assert.assertTrue(endWait - startWait >= 5000);
+        // ended before the force kill
+        Assert.assertFalse(forceClose.get());
+    }
+
     private void validate(ScannerSession ss) throws TableNotFoundException {
         List<Range> ranges = Arrays.asList(new Range(new Text(String.valueOf(25)), true, new Text(String.valueOf(27)), false),
                         new Range(new Text(String.valueOf(1)), true, new Text(String.valueOf(2)), false),
@@ -175,10 +225,10 @@ public class ScannerSessionTest {
             int row = Integer.parseInt(entry.getKey().getRow().toString());
             Integer rowCount = results.get(row);
             if (rowCount == null) {
-                rowCount = new Integer(0);
+                rowCount = 0;
             }
 
-            rowCount = rowCount.intValue() + 1;
+            rowCount = rowCount + 1;
             results.put(row, rowCount);
             count++;
         }
@@ -202,7 +252,7 @@ public class ScannerSessionTest {
         Assert.assertEquals(140000, count);
         Assert.assertEquals(14, results.keySet().size());
         for (Integer row : results.keySet()) {
-            Assert.assertEquals(new Integer(10000), results.get(row));
+            Assert.assertEquals(Integer.valueOf(10000), results.get(row));
         }
 
         ss.close();
