@@ -39,16 +39,19 @@ import datawave.data.type.LcNoDiacriticsType;
 import datawave.data.type.Type;
 import datawave.marking.MarkingFunctions;
 import datawave.query.composite.CompositeMetadataHelper;
+import datawave.query.model.IndexFieldHole;
 import datawave.query.model.QueryModel;
-import datawave.util.TableName;
+import datawave.table.constants.TableName;
 
 public class MockMetadataHelper extends MetadataHelper {
     protected final Metadata metadata = new Metadata();
     private Set<String> indexOnlyFields = new HashSet<>();
+    private Set<String> hiddenFields = new HashSet<>();
     private Set<String> expansionFields = new HashSet<>();
     private Set<String> contentFields = new HashSet<>();
     private Set<String> riFields = new HashSet<>();
     private Set<String> nonEventFields = new HashSet<>();
+    private Multimap<String,String> compositeToFieldMap = HashMultimap.create();
     private Multimap<String,String> fieldsToDatatype = HashMultimap.create();
     protected Multimap<String,Type<?>> dataTypes = HashMultimap.create();
     protected Map<String,Map<String,MetadataCardinalityCounts>> termCounts = new HashMap<>();
@@ -56,6 +59,7 @@ public class MockMetadataHelper extends MetadataHelper {
     protected Map<Map.Entry<String,String>,Map<String,Long>> cardinalityByDataTypeForFieldAndDate = Maps.newHashMap();
 
     private static final Logger log = Logger.getLogger(MockMetadataHelper.class);
+    protected Map<String,Map<String,IndexFieldHole>> fieldIndexHoles = Collections.emptyMap();
 
     Function<Type<?>,String> function = new Function<Type<?>,String>() {
         @Override
@@ -126,8 +130,8 @@ public class MockMetadataHelper extends MetadataHelper {
         getMetadata().allFields.addAll(fieldsToDatatype.keySet());
         for (Map.Entry<String,String> field : fieldsToDatatype.entries()) {
             try {
-                this.dataTypes.put(field.getKey(), Class.forName(field.getValue()).asSubclass(Type.class).newInstance());
-            } catch (InstantiationException | IllegalAccessException | ClassNotFoundException e) {
+                this.dataTypes.put(field.getKey(), Class.forName(field.getValue()).asSubclass(Type.class).getDeclaredConstructor().newInstance());
+            } catch (InstantiationException | IllegalAccessException | ClassNotFoundException | NoSuchMethodException | InvocationTargetException e) {
                 this.fieldsToDatatype.putAll(fieldsToDatatype);
             }
         }
@@ -177,6 +181,11 @@ public class MockMetadataHelper extends MetadataHelper {
     }
 
     @Override
+    public Set<String> getHiddenFields(Set<String> ingestTypeFilter) throws TableNotFoundException {
+        return hiddenFields;
+    }
+
+    @Override
     public QueryModel getQueryModel(String modelTableName, String modelName, Collection<String> unevaluatedFields) throws TableNotFoundException {
         return models.get(modelName);
     }
@@ -190,6 +199,19 @@ public class MockMetadataHelper extends MetadataHelper {
     @Override
     public boolean isReverseIndexed(String fieldName, Set<String> ingestTypeFilter) {
         return this.riFields.contains(fieldName);
+    }
+
+    @Override
+    public Set<String> getReverseIndexedFields(Set<String> ingestTypeFilter) {
+        return this.riFields;
+    }
+
+    public void setCompositeToFieldMap(Multimap<String,String> compositeToFieldMap) {
+        this.compositeToFieldMap = compositeToFieldMap;
+    }
+
+    public Multimap<String,String> getCompositeToFieldMap() throws TableNotFoundException {
+        return this.compositeToFieldMap;
     }
 
     @Override
@@ -299,12 +321,12 @@ public class MockMetadataHelper extends MetadataHelper {
     }
 
     @Override
-    public Long getCountsByFieldForDays(String fieldName, Date begin, Date end, Set<String> ingestTypeFilter) {
+    public Long getCountsByFieldForDays(String fieldName, Date begin, Date end, Set<String> dataTypes) {
         Preconditions.checkNotNull(fieldName);
         Preconditions.checkNotNull(begin);
         Preconditions.checkNotNull(end);
         Preconditions.checkArgument(begin.before(end));
-        Preconditions.checkNotNull(ingestTypeFilter);
+        Preconditions.checkNotNull(dataTypes);
 
         Date truncatedBegin = DateUtils.truncate(begin, Calendar.DATE);
         Date truncatedEnd = DateUtils.truncate(end, Calendar.DATE);
@@ -324,7 +346,7 @@ public class MockMetadataHelper extends MetadataHelper {
             Date curDate = cal.getTime();
             String desiredDate = sdf.format(curDate);
 
-            sum += getCountsByFieldInDayWithTypes(fieldName, desiredDate, ingestTypeFilter);
+            sum += getCountsByFieldInDayWithTypes(fieldName, desiredDate, dataTypes);
             cal.add(Calendar.DATE, 1);
         }
 
@@ -343,7 +365,8 @@ public class MockMetadataHelper extends MetadataHelper {
             return 0L;
         }
 
-        Iterable<Map.Entry<String,Long>> filteredByType = Iterables.filter(countsByType.entrySet(), input -> datatypes.contains(input.getKey()));
+        Iterable<Map.Entry<String,Long>> filteredByType = Iterables.filter(countsByType.entrySet(),
+                        input -> datatypes.isEmpty() || datatypes.contains(input.getKey()));
 
         long sum = 0;
         for (Map.Entry<String,Long> entry : filteredByType) {
@@ -388,6 +411,10 @@ public class MockMetadataHelper extends MetadataHelper {
         this.indexOnlyFields = indexOnlyFields;
     }
 
+    public void setHiddenFields(Set<String> hiddenFields) {
+        this.hiddenFields = hiddenFields;
+    }
+
     public void setNormalizedFields(Set<String> normalizedFields) {
         getMetadata().normalizedFields = normalizedFields;
     }
@@ -404,4 +431,12 @@ public class MockMetadataHelper extends MetadataHelper {
         this.termCounts = counts;
     }
 
+    @Override
+    public Map<String,Map<String,IndexFieldHole>> getFieldIndexHoles(Set<String> fields, Set<String> datatypes, double minThreshold) {
+        return fieldIndexHoles;
+    }
+
+    public void setFieldIndexHoles(Map<String,Map<String,IndexFieldHole>> fieldIndexHoles) {
+        this.fieldIndexHoles = fieldIndexHoles;
+    }
 }
